--- a/blog.html
+++ b/blog.html
@@ -215,135 +215,156 @@
         <div class="row">
           <div class="col-lg-6 align-self-center">
             <h3 class="page-sub-title text-capitalize w-100">
-              FEATURE PROJECTS
+              We always think
             </h3>
           </div>
           <div class="col-lg-6 align-self-end">
-            <p class="des">View the full case study of our recent featured and awesome works that we created for our
-              clients.</p>
+            <p class="des">Crafting new bright brands, unique visual systems and digital experience focused on a wide
+              range of original collabs.</p>
           </div>
         </div>
-        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">PROJECTS</h1>
+        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">ARTICLES</h1>
       </div>
     </section>
     <!-- page header section end -->
-    <!-- portfolio section start -->
-    <section class="portfolio-section">
+    <!-- blog section start -->
+    <section class="blog-section-four">
       <div class="container px-0">
         <div class="row">
           <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-1.png" alt="portfolio-img" class="img-fluid w-100">
+            <div class="blog-item-four">
+              <div class="image">
+                <img src="assets/img/blog/blog-img-1.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <ul class="list-unstyled">
+                  <li>UI Design . 15 March 2019</li>
+                </ul>
+                <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                  View All Members
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M13 18l6 -6" />
+                    <path d="M13 6l6 6" /></svg>
                 </a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-2.png" alt="portfolio-img" class="img-fluid w-100">
+            <div class="blog-item-four">
+              <div class="image">
+                <img src="assets/img/blog/blog-img-2.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <ul class="list-unstyled">
+                  <li>UI Design . 15 March 2019</li>
+                </ul>
+                <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                  View All Members
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M13 18l6 -6" />
+                    <path d="M13 6l6 6" /></svg>
                 </a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-3.png" alt="portfolio-img" class="img-fluid w-100">
+            <div class="blog-item-four">
+              <div class="image">
+                <img src="assets/img/blog/blog-img-3.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <ul class="list-unstyled">
+                  <li>UI Design . 15 March 2019</li>
+                </ul>
+                <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                  View All Members
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M13 18l6 -6" />
+                    <path d="M13 6l6 6" /></svg>
                 </a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-4.png" alt="portfolio-img" class="img-fluid w-100">
+            <div class="blog-item-four">
+              <div class="image">
+                <img src="assets/img/blog/blog-img-4.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <ul class="list-unstyled">
+                  <li>UI Design . 15 March 2019</li>
+                </ul>
+                <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                  View All Members
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M13 18l6 -6" />
+                    <path d="M13 6l6 6" /></svg>
                 </a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-5.png" alt="portfolio-img" class="img-fluid w-100">
+            <div class="blog-item-four">
+              <div class="image">
+                <img src="assets/img/blog/blog-img-5.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <ul class="list-unstyled">
+                  <li>UI Design . 15 March 2019</li>
+                </ul>
+                <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                  View All Members
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M13 18l6 -6" />
+                    <path d="M13 6l6 6" /></svg>
                 </a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-6.png" alt="portfolio-img" class="img-fluid w-100">
+            <div class="blog-item-four">
+              <div class="image">
+                <img src="assets/img/blog/blog-img-6.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <ul class="list-unstyled">
+                  <li>UI Design . 15 March 2019</li>
+                </ul>
+                <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-7.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-8.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-9.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                  View All Members
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M5 12l14 0" />
+                    <path d="M13 18l6 -6" />
+                    <path d="M13 6l6 6" /></svg>
                 </a>
               </div>
             </div>
@@ -351,7 +372,7 @@
         </div>
       </div>
     </section>
-    <!-- portfolio section end -->
+    <!-- blog section end -->
     <!-- work with us section start -->
     <section class="work-with-us-section">
       <div class="container">
