--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
                 <span class="line-2 d-block">Best Digital</span>
                 <span class="line-3 d-block">Solution</span>
               </h1>
-              <img src="assets/img/images/banner-shape.svg" alt="banner-shape" class="banner-shape-line position-absolute">
-              <p class="ms-auto">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet velit. Aliquam
+              <img src="assets/img/images/banner-shape.svg" alt="banner-shape"
+                class="banner-shape-line position-absolute">
+              <p class="ms-auto">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet velit.
+                Aliquam
                 convallis dapibus purus.</p>
             </div>
           </div>
@@ -371,7 +373,8 @@
             <a href="#" class="d-flex justify-content-between align-items-center w-100">
               <h5 class="number w-100">01</h5>
               <h3 class="title w-100">Strategy</h3>
-              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet velit.
+              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet
+                velit.
               </p>
               <div class="icon w-100">
                 <img src="assets/img/icons/icon-up-right-2.svg" alt="icon-up-right-2">
@@ -382,7 +385,8 @@
             <a href="#" class="d-flex justify-content-between align-items-center w-100">
               <h5 class="number w-100">02</h5>
               <h3 class="title w-100">Development</h3>
-              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet velit.
+              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet
+                velit.
               </p>
               <div class="icon w-100">
                 <img src="assets/img/icons/icon-up-right-2.svg" alt="icon-up-right-2">
@@ -393,7 +397,8 @@
             <a href="#" class="d-flex justify-content-between align-items-center w-100">
               <h5 class="number w-100">03</h5>
               <h3 class="title w-100">Branding</h3>
-              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet velit.
+              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet
+                velit.
               </p>
               <div class="icon w-100">
                 <img src="assets/img/icons/icon-up-right-2.svg" alt="icon-up-right-2">
@@ -404,7 +409,8 @@
             <a href="#" class="d-flex justify-content-between align-items-center w-100">
               <h5 class="number w-100">04</h5>
               <h3 class="title w-100">Marketing</h3>
-              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet velit.
+              <p class="des w-100">Etiam sed odio dictum, tempus velit non, sollicitudin neque. Donec quis aliquet
+                velit.
               </p>
               <div class="icon w-100">
                 <img src="assets/img/icons/icon-up-right-2.svg" alt="icon-up-right-2">
