--- a/blog.html
+++ b/blog.html
@@ -219,7 +219,7 @@
             </h3>
           </div>
           <div class="col-lg-6 align-self-end">
-            <p class="des">Crafting new bright brands, unique visual systems and digital experience focused on a wide
+            <p class="des mb-0">Crafting new bright brands, unique visual systems and digital experience focused on a wide
               range of original collabs.</p>
           </div>
         </div>
@@ -233,7 +233,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="blog-item-four">
-              <div class="image">
+              <div class="image overflow-hidden">
                 <img src="assets/img/blog/blog-img-1.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
@@ -242,7 +242,7 @@
                 </ul>
                 <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View All Members
+                  Read More
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
@@ -256,7 +256,7 @@
           </div>
           <div class="col-lg-4">
             <div class="blog-item-four">
-              <div class="image">
+              <div class="image overflow-hidden">
                 <img src="assets/img/blog/blog-img-2.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
@@ -265,7 +265,7 @@
                 </ul>
                 <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View All Members
+                  Read More
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
@@ -279,7 +279,7 @@
           </div>
           <div class="col-lg-4">
             <div class="blog-item-four">
-              <div class="image">
+              <div class="image overflow-hidden">
                 <img src="assets/img/blog/blog-img-3.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
@@ -288,7 +288,7 @@
                 </ul>
                 <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View All Members
+                  Read More
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
@@ -302,7 +302,7 @@
           </div>
           <div class="col-lg-4">
             <div class="blog-item-four">
-              <div class="image">
+              <div class="image overflow-hidden">
                 <img src="assets/img/blog/blog-img-4.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
@@ -311,7 +311,7 @@
                 </ul>
                 <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View All Members
+                  Read More
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
@@ -325,7 +325,7 @@
           </div>
           <div class="col-lg-4">
             <div class="blog-item-four">
-              <div class="image">
+              <div class="image overflow-hidden">
                 <img src="assets/img/blog/blog-img-5.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
@@ -334,7 +334,7 @@
                 </ul>
                 <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View All Members
+                  Read More
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
@@ -348,7 +348,7 @@
           </div>
           <div class="col-lg-4">
             <div class="blog-item-four">
-              <div class="image">
+              <div class="image overflow-hidden">
                 <img src="assets/img/blog/blog-img-6.png" alt="blog-img" class="img-fluid w-100">
               </div>
               <div class="text">
@@ -357,7 +357,7 @@
                 </ul>
                 <h4 class="title">How to manage a talented and successful sign team.</h4>
                 <a class="view-all-btn2" href="#">
-                  View All Members
+                  Read More
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
