--- a/team.html
+++ b/team.html
@@ -214,144 +214,156 @@
       <div class="container px-0">
         <div class="row">
           <div class="col-lg-6 align-self-center">
-            <h3 class="page-sub-title text-capitalize w-100">
-              FEATURE PROJECTS
+            <h3 class="page-sub-title w-100 text-uppercase">
+              creative team
             </h3>
           </div>
           <div class="col-lg-6 align-self-end">
-            <p class="des mb-0">View the full case study of our recent featured and awesome works that we created for our
-              clients.</p>
+            <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday
+              nights and aspires to design the dent in the universe.</p>
           </div>
         </div>
-        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">PROJECTS</h1>
+        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">MEMBER</h1>
       </div>
     </section>
     <!-- page header section end -->
-    <!-- portfolio section start -->
-    <section class="portfolio-section">
+    <!-- team section two start -->
+    <section class="team-section-two">
       <div class="container px-0">
+        <div class="row team-row">
+          <div class="col-lg-4">
+            <div class="team-item team-member-1">
+              <div class="img">
+                <img src="assets/img/team/team-2-img-1.png" alt="team-2-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Arlene McCoy</h4>
+                <p>UX Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-item team-member-2">
+              <div class="img">
+                <img src="assets/img/team/team-2-img-2.png" alt="team-2-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Eleanor Pena</h4>
+                <p>Product Manager</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-item team-member-3">
+              <div class="img">
+                <img src="assets/img/team/team-2-img-3.png" alt="team-2-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Ken F. Berry</h4>
+                <p>Plugin Developer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-item team-member-1">
+              <div class="img">
+                <img src="assets/img/team/team-2-img-1.png" alt="team-2-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Arlene McCoy</h4>
+                <p>UX Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-item team-member-2">
+              <div class="img">
+                <img src="assets/img/team/team-2-img-2.png" alt="team-2-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Eleanor Pena</h4>
+                <p>Product Manager</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="team-item team-member-3">
+              <div class="img">
+                <img src="assets/img/team/team-2-img-3.png" alt="team-2-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Ken F. Berry</h4>
+                <p>Plugin Developer</p>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row">
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-1.png" alt="portfolio-img" class="img-fluid w-100">
+          <div class="col-lg-12">
+            <div class="join-our-team d-flex justify-content-center">
+              <a class="view-all-btn view-all-btn-primary text-uppercase" href="#">
+                Join our talented team
+                <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="team-inner-banner">
+          <img src="assets/img/team/team-inner-banner.png" alt="team-inner-banner" class="img-fluid w-100">
+        </div>
+        <div class="team-counter">
+          <div class="text">
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="section-title-block position-relative">
+                  <h3 class="section-title">Your digital products & services ensured by our talented team</h3>
+                  <img src="assets/img/team/team-shape.png" alt="team-shape" class="team-shape position-absolute">
+                </div>
               </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
+              <div class="col-lg-6 ms-auto">
+                <p>A hybrid team with hybrid culture. More than 20 people,
+                  including designers, engineers, creatives, thinkers, creative
+                  table and media experts always looking from a new
+                  perspective.</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-2.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-3.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-4.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
+          <div class="counter-main">
+            <div class="row">
+            <div class="col-lg-6 ms-auto">
+              <div class="row counter-row">
+                <div class="col-lg-6">
+                  <div class="counter-item">
+                    <h4 class="counter-title"><span>25</span>k</h4>
+                    <p>Project completed</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="counter-item">
+                    <h4 class="counter-title"><span>8</span>k</h4>
+                    <p>Happy customers</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="counter-item">
+                    <h4 class="counter-title"><span>15</span></h4>
+                    <p>Years experiences</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="counter-item">
+                    <h4 class="counter-title"><span>98</span></h4>
+                    <p>Awards achievement</p>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-5.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-6.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-7.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-8.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-9.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- portfolio section end -->
+    <!-- team section two end -->
     <!-- work with us section start -->
     <section class="work-with-us-section">
       <div class="container">
