--- a/blog-details.html
+++ b/blog-details.html
@@ -213,145 +213,185 @@
     <section class="page-header">
       <div class="container px-0">
         <div class="row">
-          <div class="col-lg-6 align-self-center">
-            <h3 class="page-sub-title text-capitalize w-100">
-              FEATURE PROJECTS
+          <div class="col-lg-9 align-self-center">
+            <p class="blog-details-meta">UI Design. 15 March 2019</p>
+            <h3 class="page-sub-title2 text-capitalize w-100">
+              Donate your design for newest designers to try better
             </h3>
           </div>
-          <div class="col-lg-6 align-self-end">
-            <p class="des mb-0">View the full case study of our recent featured and awesome works that we created for our
-              clients.</p>
-          </div>
         </div>
-        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">PROJECTS</h1>
+        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">ARTICLES</h1>
       </div>
     </section>
     <!-- page header section end -->
-    <!-- portfolio section start -->
-    <section class="portfolio-section">
+    <!-- blog details section start -->
+    <section class="blog-details-section">
       <div class="container px-0">
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-1.png" alt="portfolio-img" class="img-fluid w-100">
+        <div class="writer-info d-flex align-items-center">
+          <div class="info-block d-flex align-items-center gap-3">
+            <div class="img">
+              <img src="assets/img/blog/blog-writer.png" alt="blog-writer" class="img-fluid w-100">
+            </div>
+            <div class="text">
+              <p>Writen by</p>
+              <h4 class="title">Codexpant</h4>
+            </div>
+          </div>
+          <div class="info-block">
+            <div class="text viewed">
+              <p>Viewed</p>
+              <h4 class="title">3 min read</h4>
+            </div>
+          </div>
+        </div>
+        <div class="blog-details-banner">
+          <img src="assets/img/blog/blog-details-banner.png" alt="blog-details-banner" class="img-fluid w-100">
+        </div>
+        <div class="blog-details-info">
+          <p>We love to bring designs to life as a developer, and I aim to do this using whatever front end tools are
+            necessary. My preferred tools are more modern javascript libraries like React.js but I like to use whatever
+            is best for the websites needs. There are several reasons why a business would consider a rebrand and it
+            doesn’t necessarily mean the business has been unsuccessful.</p>
+          <p>But in order that you may see whence all this born error of those who accuse pleasure and praise pain, I
+            will open the whole matter, and explain the very things which were said by that discoverer of truth and, as
+            it were, the architect of a happy life.</p>
+          <div class="inner-block-img">
+            <div class="row">
+              <div class="col-lg-7">
+                <div class="img">
+                  <img src="assets/img/blog/blog-inner-img-1.png" alt="blog-inner-img" class="img-fluid w-100">
+                </div>
               </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
+              <div class="col-lg-5">
+                <div class="img">
+                  <img src="assets/img/blog/blog-inner-img-2.png" alt="blog-inner-img" class="img-fluid w-100">
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-2.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
+          <div class="content-block">
+            <div class="section-title-block">
+              <h3 class="section-title">JavaScript</h3>
+            </div>
+            <p>We love to bring designs to life as a developer, and I aim to do this using whatever front end tools are
+              necessary. My preferred tools are more modern javascript libraries like React.js but I like to use
+              whatever
+              is best for the websites needs. There are several reasons why a business would consider a rebrand and it
+              doesn’t necessarily mean the business has been unsuccessful. But in order that you may see whence all this
+              born error of those who accuse pleasure and praise pain, I will open the whole matter, and explain the
+              very
+              things which were said by that discoverer of truth and, as it were, the architect of a happy life.</p>
+          </div>
+          <div class="content-block">
+            <div class="section-title-block">
+              <h3 class="section-title">Fremework</h3>
+            </div>
+            <p>We love to bring designs to life as a developer, and I aim to do this using whatever front end tools are
+              necessary. My preferred tools are more modern javascript libraries like React.js but I like to use
+              whatever
+              is best for the websites needs. There are several reasons why a business would consider a rebrand and it
+              doesn’t necessarily mean the business has been unsuccessful.</p>
+            <ul class="list-unstyled">
+              <li><span>+</span> Brand Development</li>
+              <li><span>+</span> UX/UI Design </li>
+              <li><span>+</span> Front-end Development</li>
+              <li><span>+</span> Copywriting</li>
+              <li><span>+</span> Shopify Development</li>
+            </ul>
+          </div>
+          <div class="content-block">
+            <div class="section-title-block">
+              <h3 class="section-title">Visual Studio</h3>
+            </div>
+            <p>Just like other pseudo-elements and pseudo-class selectors, :not() can be chained with other
+              pseudo-classes and pseudo-elements. For example, the following will add a “New!” word to list items that
+              do not have a .old class name, using the ::after pseudo-element:</p>
+          </div>
+          <div class="inner-block-img">
+            <img src="assets/img/blog/blog-inner-img-3.png" alt="blog-inner-img" class="img-fluid w-100">
+            <p>Tags: design, figma, update</p>
+          </div>
+
+        </div>
+        <div class="related-blog">
+          <div class="section-title-block">
+            <h3 class="section-title">Related Aricles</h3>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="blog-item-four">
+                <div class="image overflow-hidden">
+                  <img src="assets/img/blog/blog-img-4.png" alt="blog-img" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <ul class="list-unstyled">
+                    <li>UI Design . 15 March 2019</li>
+                  </ul>
+                  <h4 class="title">How to manage a talented and successful sign team.</h4>
+                  <a class="view-all-btn2" href="#">
+                    Read More
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l14 0" />
+                      <path d="M13 18l6 -6" />
+                      <path d="M13 6l6 6" /></svg>
+                  </a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-3.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-4.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
+            <div class="col-lg-4">
+              <div class="blog-item-four">
+                <div class="image overflow-hidden">
+                  <img src="assets/img/blog/blog-img-5.png" alt="blog-img" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <ul class="list-unstyled">
+                    <li>UI Design . 15 March 2019</li>
+                  </ul>
+                  <h4 class="title">How to manage a talented and successful sign team.</h4>
+                  <a class="view-all-btn2" href="#">
+                    Read More
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l14 0" />
+                      <path d="M13 18l6 -6" />
+                      <path d="M13 6l6 6" /></svg>
+                  </a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-5.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-6.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-7.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-8.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="portfolio-item">
-              <div class="img">
-                <img src="assets/img/portfolio/portfolio-img-9.png" alt="portfolio-img" class="img-fluid w-100">
-              </div>
-              <div class="text">
-                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
-                <a class="view-all-btn2" href="#">
-                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
-                </a>
+            <div class="col-lg-4">
+              <div class="blog-item-four">
+                <div class="image overflow-hidden">
+                  <img src="assets/img/blog/blog-img-6.png" alt="blog-img" class="img-fluid w-100">
+                </div>
+                <div class="text">
+                  <ul class="list-unstyled">
+                    <li>UI Design . 15 March 2019</li>
+                  </ul>
+                  <h4 class="title">How to manage a talented and successful sign team.</h4>
+                  <a class="view-all-btn2" href="#">
+                    Read More
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l14 0" />
+                      <path d="M13 18l6 -6" />
+                      <path d="M13 6l6 6" /></svg>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- portfolio section end -->
+    <!-- blog details section end -->
     <!-- work with us section start -->
     <section class="work-with-us-section">
       <div class="container">
@@ -382,6 +422,7 @@
     </div>
   </main>
   <!-- main area part end -->
+
   <!-- back to top button start -->
   <button class="scroll-to-top position-fixed">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -448,6 +489,7 @@
     </div>
   </footer>
   <!-- footer section end -->
+
 
   <!-- JS here -->
   <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
