--- a/index.html
+++ b/index.html
@@ -245,18 +245,18 @@
     </section>
     <!-- banner section end -->
     <!-- brand slider section start -->
-    <div class="bland-slider-section overflow-hidden position-relative z-1">
+    <div class="brand-slider-section overflow-hidden position-relative z-1">
       <div class="slider-main d-flex gap-4 align-items-center">
         <div class="slider-item d-flex">
-          <a href="#"><img src="assets//img/brands/brand-img-1.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-2.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-3.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-4.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-5.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-6.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-7.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-1.png" alt="brand-img"></a>
-          <a href="#"><img src="assets//img/brands/brand-img-2.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-1.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-2.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-3.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-4.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-5.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-6.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-7.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-1.png" alt="brand-img"></a>
+          <a href="#"><img src="assets/img/brands/brand-img-2.png" alt="brand-img"></a>
         </div>
         <div class="slider-item d-flex">
           <a href="#"><img src="assets//img/brands/brand-img-1.png" alt="brand-img"></a>
